// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EffectiveRolesList/> multiple roles 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Editor"
          >
            Editor
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Folder%20Administrator"
          >
            Folder Administrator
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Project%20Administrator"
          >
            Project Administrator
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Reader"
          >
            Reader
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Restricted%20Reader"
          >
            Restricted Reader
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Submitter"
          >
            Submitter
          </a>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> no roles 1`] = `null`;

exports[`<EffectiveRolesList/> single role 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Editor"
          >
            Editor
          </a>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> with root policy 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Editor"
          >
            Editor
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Folder%20Administrator"
          >
            Folder Administrator
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Project%20Administrator"
          >
            Project Administrator
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Reader"
          >
            Reader
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Restricted%20Reader"
          >
            Restricted Reader
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Submitter"
          >
            Submitter
          </a>
        </li>
        <li
          className="principal-detail-li"
        >
          <a
            href="#/admin/permissions?expand=Application%20Admin"
          >
            Application Admin
          </a>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> without policy 1`] = `null`;
